--- a/css/styles.css
+++ b/css/styles.css
@@ -32,8 +32,13 @@ input[type="text"] {
     background-color: #f9f9f9;
 }
 
-button {
-    width: 100%;
+#botones{
+    display: flex;
+    justify-content: space-around;
+}
+
+#generar {
+    width: 75%;
     padding: 10px;
     margin-top: 20px;
     font-size: 18px;
@@ -45,7 +50,31 @@ button {
     transition: background-color 0.3s;
 }
 
-button:hover {
+#generar:hover {
+    background-color: #3a629e;
+}
+
+#copiar{
+    width: 15%;
+    height: 41px;
+    padding: 10px;
+    margin-top: 20px;
+    background-color: #4c6faf;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#copiar img{
+    width: 37px;
+    height: 37px;
+}
+
+#copiar:hover {
     background-color: #3a629e;
 }
 
